# scivision

./: .all-contributorsrc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  404.html  CITATION.cff  CNAME  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  asset-manifest.json  check_datasets.js  contributing.md  datasource.js  datasource_schema.js  demo_endtoend_imagenet.ipynb  environment.yml  genschema.py  index.html  load_scivision_model_from_github.ipynb  model.html  model.js  model_schema.js  postBuild  pretrained_imagenet_scivision_example.ipynb  prism.css  pyproject.toml  query_scivision_catalog.ipynb  readthedocs_requirements.txt  requirements.txt  setup.cfg  setup.py  summary.md
.github/: pull_request_template.md
assets/: Preview--Rnp3uf6.js  Preview--U_0ma2m.js  Preview-19V8tlqr.js  Preview-2j7otAqT.js  Preview-3Gq51qNH.js  Preview-3pv0tgy0.js  Preview-3tXHlndW.js  Preview-3xDt-4pi.js  Preview-4zKpK4wB.js  Preview-53kTx76V.js  Preview-6NlzZoHf.js  Preview-6onPYZSg.js  Preview-6sbPe815.js  Preview-72-t5ZPQ.js  Preview-7K_Qf9zg.js  Preview-8F-wriqe.js  Preview-9hTJNFSB.js  Preview-AojvgCcG.js  Preview-AultvF5a.js  Preview-B-5mBtFh.js  Preview-B-OtEBOc.js  Preview-B1Axgfn6.js  Preview-B1DZN97c.js  Preview-B1M5wx7F.js  Preview-B1jnqBon.js  Preview-B1l9vioV.js  Preview-B23CvH6L.js  Preview-B4NXWleV.js  Preview-B4WkzG98.js  Preview-B64rEn8b.js  Preview-B6SFZ__a.js  Preview-B6i_m-28.js  Preview-B7oRRbcV.js  Preview-B8YovmA4.js  Preview-B8yvE1DC.js  Preview-B9CWSvJ7.js  Preview-B9fq6shf.js  Preview-BAQPN3P7.js  Preview-BB1Mjrws.js  Preview-BBo2yXas.js  (+1170 more)
(+416 files in other folders)
